--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <title>meu portifolio</title>
-</head>
+    </head>
+
 <body>
-    <img src="img/f250 deboche .jpg" alt="avatar do lucas" srcset="" />
-    <p>Eu sou f250 deboche</p>
+    <header class="container text-center">
+    <img src="img/f250 deboche .jpg" alt="avatar do lucas" class="rounded-circle"
+    width="150"
+    height="150" srcset="" />
+    <p class="lead">Eu sou f250 deboche</p>
     <h1>f250 tunada</h1>
     <p> Sou uma ford f250. tunada, com som deboche e rebaixada. participo de eventos chamando atençâo e inspirando novos projetos.</p>
+    <p>minhas especialidades:</p>
+    <div>
+        <p class="badge bg-secondary">som</p>
+        <p class="badge bg-secondary">rodão</p>
+        <p class="badge bg-secondary">kit turbo</p>
+        <p class="badge bg-secondary">super suspenção</p>
+    </div>
+</header>
 </body>
+
 </html>
