--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="prt-b">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
-    <title>meu portifolio</title>
-    </head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"  crossorigin="anonymous"  />
+    <link rel="stylesheet" href="style.css">
+    <title>Meu portfólio</title>
+</head>
 
 <body>
-    <header class="container text-center">
-    <img src="img/f250 deboche .jpg" alt="avatar do lucas" class="rounded-circle"
-    width="150"
-    height="150" srcset="" />
-    <p class="lead">Eu sou f250 deboche</p>
-    <h1>f250 tunada</h1>
-    <p> Sou uma ford f250. tunada, com som deboche e rebaixada. participo de eventos chamando atençâo e inspirando novos projetos.</p>
-    <p>minhas especialidades:</p>
-    <div>
-        <p class="badge bg-secondary">som</p>
-        <p class="badge bg-secondary">rodão</p>
-        <p class="badge bg-secondary">kit turbo</p>
-        <p class="badge bg-secondary">super suspenção</p>
-    </div>
-</header>
+    <header class="container">
+        <img src="img/azul.jpeg" alt="avatar da Fernanda" srcset="">
+        <p>Eu sou Helen</p>
+        <h1></h1>faço laçcos de cetim</h1>
+        <p>Sou estudante do CCM João XXIII, atualmente estou no segundo ano do ensino médio, pretendo fazer uma faculdade de estética ou direito.
+             comecei a fazer os laços no ano de 2024,hoje no ano de 2025 tenho minha marca, que é HS_CETIM. 
+            . Veja os projetos
+            que já desenvolvi!</p>
+        <p>Minhas habilidades</p>
+        <div>
+            <p>VENDAS</p>
+            <p>ARTESANATO</p>
+            <p>COZINHAR</p>
+            <p>ANDAR DE MOTO</p>
+        </div>
+    </header>
 </body>
 
 </html>
