--- a/index.html
+++ b/index.html
@@ -24,7 +24,26 @@
         <p class="badge bg-secondary">kit turbo</p>
         <p class="badge bg-secondary">super suspenção</p>
     </div>
-</header>
+</header> <main class="container">
+        <h2>minha f250</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/f250 deboche .jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">f250</h5>
+                      <p class="card-text">a f250 é famosa por conta do seu visual, chamando muita atenção</p>
+                      <a href="https://youtube.com/shorts/l5ce63x2tbo?si=26b7aJPvBi6id5sN" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+        </div>
+
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
 </body>
 
 </html>
