--- a/index.html
+++ b/index.html
@@ -24,7 +24,83 @@
         <p class="badge bg-secondary">kit turbo</p>
         <p class="badge bg-secondary">super suspenção</p>
     </div>
-</header> <main class="container">
+</header> 
+<main class="container mt-5">
+    <h2>minha f250</h2>
+    <div class="row">
+        <!-- Projeto 1 -->
+        <div class="col-md-4">
+            <div class="card">
+                <img src="img/f250 deboche .jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                <div class="card-body">
+                    <h5 class="card-title">MINHA F250 DEBOCHE</h5>
+                    <p class="card-text">a f250 é famosa por conta do seu visual, chamando muita atenção
+                        em eventos, por seu som.
+                    </p>
+                    <button type="button" class='https://youtube.com/shorts/l5ce63x2tbo?si=26b7aJPvBi6id5sN" class="btn btn-primary">Go somewhere/button>
+                </div>
+            </div>
+        </div>
+        <!-- Projeto 2 -->
+        <div class="col-md-4">
+            <div class="card">
+                <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                <div class="card-body">
+                    <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
+                        Artificial</h5>
+                    <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
+                        impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
+                        pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
+                        futuro da IA.</p>
+                    <button type="button" class="btn btn-link">Veja o projeto</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Projeto 3 -->
+        <div class="col-md-4">
+            <div class="card">
+                <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                <div class="card-body">
+                    <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
+                    </h5>
+                    <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
+                        astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
+                        forma da Terra através de cenários dinâmicos e diálogos informativos.
+                    </p>
+                    <button type="button" class="btn btn-link">Veja o projeto</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
+<footer class="container py-5">
+    <h2>Entre em contato</h2>
+    <div>
+        <a href="https://github.com/femascheti">GitHub</a>
+    </div>
+    <p class="my-5 text-center">© Copyright 2024. Produzido por Fernanda Mascheti</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<main class="container">
         <h2>minha f250</h2>
         <div class="row">
             <div class="col-md-4">
